# diamond-casa-ecommerce

./: .gitignore  ADMIN_DASHBOARD_ALL_MODULES_STATUS.md  ADMIN_DASHBOARD_FIX.md  ADMIN_DASHBOARD_MODULES_CHECK.md  ADMIN_LOGIN_INSTRUCTIONS.md  ADMIN_SCRIPT_ERROR_CHECK_REPORT.md  BULK_PRODUCT_IMPORT_GUIDE.md  COMPLETE_CONFIGURATION.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_PRODUCT_DATA_MAPPING.md  COMPLETE_RECHECK_REPORT.md  COMPREHENSIVE_ERROR_FIX.md  CONFIGURATION_CHECKLIST.md  CONFIGURE_CREDENTIALS.md  CONNECTION_FIXES_APPLIED.md  CONNECTION_TROUBLESHOOTING.md  ERPNEXT_INTEGRATION_BUG_FIXES.md  ERPNEXT_SETUP_GUIDE.md  ERPNEXT_WEBSITE_INTEGRATION_GUIDE.md  ERPNext_ECOMMERCE_INTEGRATION.md  ERPNext_INTEGRATION_GUIDE.md  EXCEL_COLUMN_MAPPING_REFERENCE.md  EXCEL_TO_ERPNEXT_UPLOAD_GUIDE.md  FAST_TRACK_SETUP.md  FIND_YOUR_ERPNEXT_URL.md  FIX_404_ERRORS.md  FIX_ADMIN_LOGIN.md  FIX_CONNECTION_ISSUES.md  FIX_CORS_ERROR.md  FIX_ERPNEXT_MODULE_NOT_WORKING.md  FIX_FROZEN_DASHBOARD.md  FIX_LEFT_PANEL_NAVIGATION.md  FIX_LOADINTEGRATIONLOGS_ERROR.md  FIX_SETUPEXCELUPLOAD_ERROR.md  FIX_SETUPPURCHASEORDERS_ERROR.md  FORM_FIELDS_FIX.md  GET_CREDENTIALS_NOW.md  GITHUB_PAGES_DEPLOYMENT.md  GITHUB_UPLOAD_INSTRUCTIONS.md  IMAGE_USAGE_GUIDE.md  (+35 more)
diamondcasa_jewellery/: .gitignore  COMPLETE_FIX.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_INSTALLATION_FIX.md  COPY_PASTE_SSH_COMMANDS.txt  DEPLOYMENT_COMPLETE.md  DEPLOY_COMMANDS.txt  DEPLOY_NOW.bat  DEPLOY_TO_FRAPPE_CLOUD.sh  DEPLOY_TO_FRAPPE_CLOUD_FINAL.md  ERROR_CHECK_REPORT.md  EXACT_FORM_VALUES.txt  FINAL_INSTALL_FIX.sh  FINAL_SJE_STATUS.md  (+46 more)
(+68 files in other folders)
